@@ -8,8 +8,8 @@ import math
 
 class Point:
     "Base class for all pointlike objects in Feynman diagrams"
-    xpos = 0.0
-    ypos = 0.0
+#    xpos 
+#    ypos 
 
     def __init__(self, xpos, ypos):
         self.setpos(xpos, ypos)
@@ -31,7 +31,7 @@ class Point:
         if otherpoint.x() != self.x():
            return (otherpoint.y() - self.y()) / (otherpoint.x() - self.x())
         else:
-           return 999. # An arbitrary large number to replace infinity
+           return 9999. # An arbitrary large number to replace infinity
 
     def arg(self, otherpoint):
         if otherpoint.x() != self.x():
@@ -67,18 +67,76 @@ class Point:
 ##### Decorated Point class #####
 
 class DecoratedPoint(Point):
+    "Class for a point drawn with a marker"
+#    xpos # inherited
+#    ypos # inherited
+#    marker
+#    radius
+#    fillstyles
+#    strokestyles
 
     def __init__(self, xpos, ypos, mark=None, size=4*pyx.unit.t_pt, fillstyles=[pyx.color.rgb.black], strokestyles=[pyx.color.rgb.black]):
         self.setpos(xpos, ypos)
         if mark is not None:
-           self.mark = mark(xpos,ypos,size)
+           self.marker = mark
+           self.radius = size
         else:
-           self.mark = pyx.box.rect(xpos-0.5*size,ypos-0.5*size,size,size)
-        self.fillstyles = fillstyles
-        self.strokestyles = strokestyles
+           self.marker = NamedMark["square"]
+           self.radius = 0 
+        self.fillstyles = [x for x in fillstyles] # lists are mutable --
+        self.strokestyles = [x for x in strokestyles] # hence make a copy!
+
+    def mark(self,mark,size=None):
+        self.marker = mark
+        if size is not None:
+           self.radius = size
+        if size is None and self.radius == 0: # change shape of a true point?
+           self.radius = 4*pyx.unit.t_pt # probably want to use default size
+        return self
+
+    def size(self,size):
+        self.radius = size
+        return self
+
+    def fillstyle(self,style):
+        self.fillstyles.append(style)
+        return self
+
+    def strokestyle(self,style):
+        self.strokestyles.append(style)
+        return self
 
     def draw(self, canvas):
-        canvas.fill(self.mark.path(),self.fillstyles)
-        canvas.stroke(self.mark.path(),self.strokestyles)
+        canvas.fill(self.marker(self.xpos,self.ypos,self.radius).path(),
+                    self.fillstyles)
+        canvas.stroke(self.marker(self.xpos,self.ypos,self.radius).path(),
+                      self.strokestyles)
+
+    def to_xml(self):
+        ele = Point.to_xml(self)
+        fills = ""
+        for x in self.fillstyles:
+            if isinstance(x,pyx.color.rgb):
+               fills = fills + " #%02x%02x%02x"%(255*x.color["r"],
+                               255*x.color["g"],255*x.color["b"])
+        strokes = ""
+        for x in self.strokestyles:
+            if isinstance(x,pyx.color.rgb):
+               strokes = strokes + " #%02x%02x%02x"%(255*x.color["r"],
+                                   255*x.color["g"],255*x.color["b"])
+        s = "mark-shape:%s;mark-size:%s;fill-style:%s;line-style:%s;"%(
+                      MarkedName[self.marker],pyx.unit.tocm(self.radius),
+                      fills,strokes )
+        ele.attrib["style"] = s
+        return ele
 
 
+# A square marker
+_square = lambda x,y,r:pyx.box.rect(x-r,y-r,2*r,2*r)
+
+# A dictionary mapping feynML "mark" choices to marker classes
+NamedMark = {"square": _square, 
+             "circle": pyx.path.circle}
+MarkedName = {_square: "square",
+              pyx.path.circle: "circle"}
+ 
